📖 fixed links across the docs to match new convention

--- a/posts/dev/getting-started/changelog.mdx
+++ b/posts/dev/getting-started/changelog.mdx
@@ -29,7 +29,7 @@ This has been moved to the `@remix-pwa/manifest` package.
 ### Support for Remix SPA mode and Single Fetch
 
 Remix PWA now supports both Remix SPA mode and Single Fetch. This drastically alters the behaviour of Remix PWA and how it handles the service worker.
-Check out the [SPA](/docs/next/spa) and [Single Fetch](/docs/next/single-fetch) docs for more information.
+Check out the [SPA](/docs/dev/spa) and [Single Fetch](/docs/dev/single-fetch) docs for more information.
 
 Some of the less obvious changes include faster build times and smaller service worker sizes
 
@@ -109,7 +109,7 @@ This has been replaced by the `installPWAGlobals` hook.
 
 ### Removal of `ManifestLink` component
 
-This has been moved to the [`@remix-pwa/manifest`](/docs/next/changelog#remix-pwa-manifest) package.
+This has been moved to the [`@remix-pwa/manifest`](/docs/dev/changelog#remix-pwa-manifest) package.
 
 ### Reoval of message sending utilities
 
