--- a/posts/dev/getting-started/quick-start.mdx
+++ b/posts/dev/getting-started/quick-start.mdx
@@ -45,7 +45,7 @@ export default defineConfig({
 })
 ```
 
-The options for the `remixPWA` plugin can be found [here](/docs/next/vite-config).
+The options for the `remixPWA` plugin can be found [here](/docs/dev/vite-config).
 
 To create a service worker, you can use the `remix-pwa` CLI:
 
