--- a/posts/dev/getting-started/v5.mdx
+++ b/posts/dev/getting-started/v5.mdx
@@ -8,7 +8,7 @@ order: 3
 Remix PWA v5 is a major milestone built upon v4. It is built to work with Remix latest features, as well as prepare for React Router v7.
 
 Upgrading to v5 doesn't require a lot of work. The main thing you would need to do is to upgrade your `@remix-pwa/*` packages to the latest `v5.x.x` version. There are also a few breaking changes that you would need to be aware of.
-Check out the [changelog](/docs/next/changelog) for more details.
+Check out the [changelog](/docs/dev/changelog) for more details.
 
 ## Upgrading from v4 to v5
 
@@ -63,4 +63,4 @@ Check out the rest of the docs for even more details.
 
 ## Upgrading from older versions to v5
 
-Check out the [this doc](/docs/main/v4) for more details on migrating from v3 and below.
+Check out the [this doc](/docs/latest/v4) for more details on migrating from v3 and below.
