--- a/posts/dev/utils/redirect.mdx
+++ b/posts/dev/utils/redirect.mdx
@@ -5,4 +5,4 @@ alternateTitle: redirect
 toc: false
 ---
 
-> Like [`json`](/docs/main/json) and the [`defer`](/docs/main/defer) utility, this function is also a re-export of React Router [redirect](https://reactrouter.com/en/main/fetch/redirect) function.
+> Like [`json`](/docs/latest/json) and the [`defer`](/docs/latest/defer) utility, this function is also a re-export of React Router [redirect](https://reactrouter.com/en/main/fetch/redirect) function.
