--- a/posts/dev/utils/vite-config.mdx
+++ b/posts/dev/utils/vite-config.mdx
@@ -31,7 +31,7 @@ export default defineConfig({
 
 The `injectSWRegister` option of type: `boolean` is used to set wether to automatically register the service worker or not via plugin injection.
 
-By default, the service worker is registered automatically. Alternatively, you can set this to `false` and manually register the service worker in your application via the [`PWAScripts`](/docs/next/pwa-scripts) component.
+By default, the service worker is registered automatically. Alternatively, you can set this to `false` and manually register the service worker in your application via the [`PWAScripts`](/docs/dev/pwa-scripts) component.
 
 ### `workerBuildDirectory`
 
