--- a/posts/latest/guides/messaging.mdx
+++ b/posts/latest/guides/messaging.mdx
@@ -148,7 +148,7 @@ It also has a `handleMessage` method (like all message handlers) that can be use
 
 The `SkipWaitHandler` is a subclass of `MessageHandler` that listens for the `SKIP_WAITING` event. It is used to skip the waiting phase of the service worker and activate the new service worker immediately.
 
-A very simple handler, it doesn't take in any options and simply handles skipping workers. Should be paired with [`sendSkipWaitingMessage`](/docs/main/misc#send-skip-waiting-message) for maximum effect.
+A very simple handler, it doesn't take in any options and simply handles skipping workers. Should be paired with [`sendSkipWaitingMessage`](/docs/latest/misc#send-skip-waiting-message) for maximum effect.
 
 ## Recommended Tips
 
