--- a/posts/latest/guides/push-api.mdx
+++ b/posts/latest/guides/push-api.mdx
@@ -48,7 +48,7 @@ Before we dive into the awesomeness of push, let's clarify a few things about ho
 
 - `.` (`@remix-pwa/push`): This is the default import route and is used for server-side imports. It includes all the server-side APIs and utilities for building push on the server.
 - `@remix-pwa/push/client`: This is for importing client-side APIs and utilities. It includes all the client-side APIs and utilities for building in your PWA client.
-- `@remix-pwa/push/use-push`: This is the import route for the [`usePush`](/docs/main/use-push) hook, a React hook for everything push in your PWA client.
+- `@remix-pwa/push/use-push`: This is the import route for the [`usePush`](/docs/latest/use-push) hook, a React hook for everything push in your PWA client.
 
 Now that we've made sense of the import routes, let's keep exploring the exciting world of push notifications in web apps!
 
@@ -81,7 +81,7 @@ export function NotificationButton() {
 
 When you call this hook, you'll receive a `PushObject` that's bursting with features. It's like getting a brand-new smartphone, but instead of cat videos and memes, you get a whole suite of push notification superpowers. With this object in hand, you can subscribe to push notifications, unsubscribe from them, and even check if you're already subscribed – all with just a few lines of code.
 
-Check out the [`usePush` doc page](/docs/main/use-push) for more information on how to use this hook and unlock the full potential of push notifications in your web app 🪝.
+Check out the [`usePush` doc page](/docs/latest/use-push) for more information on how to use this hook and unlock the full potential of push notifications in your web app 🪝.
 
 ### `PushManager` to the Rescue
 
