--- a/posts/latest/hooks/use-push.mdx
+++ b/posts/latest/hooks/use-push.mdx
@@ -109,4 +109,4 @@ unsubscribeFromPush(() => {
 })
 ```
 
-The `usePush` (client) hook is just one side of the coin. The flipside, server, is a more sophisticated topic covered, alongside others, in the [Push API doc](/docs/main/push-api)
+The `usePush` (client) hook is just one side of the coin. The flipside, server, is a more sophisticated topic covered, alongside others, in the [Push API doc](/docs/latest/push-api)
