--- a/posts/latest/started/v4.mdx
+++ b/posts/latest/started/v4.mdx
@@ -5,7 +5,7 @@ alternateTitle: Ugrading to v4
 order: 2
 ---
 
-As the [Quick Start](/docs/main/quick-start) docs might have informed you, Remix PWA v4 utilises just Vite. Previously,
+As the [Quick Start](/docs/latest/quick-start) docs might have informed you, Remix PWA v4 utilises just Vite. Previously,
 Remix PWA utilised `esbuild` and was built to work in tandem with the Remix esbuild framework. As such, we needed to keep
 supporting Remix Esbuild going forward.
 
